--- a/assets/styles.css
+++ b/assets/styles.css
@@ -375,3 +375,104 @@ footer a {
         padding-bottom: 25px;
     }
 }
+
+/* About Page Styles */
+
+/* Navbar - Make logo li active */
+nav ul #logo.home a:hover {
+    color:#2F51B6;
+    border-bottom: 2px solid #2F51B6;
+}
+
+/* Section Mission */
+.mission {
+    width: 60%;
+    margin: 25px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.mission h1{
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-size: 2.2rem;
+    font-family: 'Open sans', 'sans-serif';
+    font-weight: 600;
+}
+
+.mission p {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    line-height:1.2;
+    letter-spacing: 1.5px;
+}
+
+.mission button.cta {
+    width: 30%;
+    align-self: center;
+    margin-top: 25px;
+}
+/* Section Team */
+.team {
+    width: 100%;
+}
+.team .team-title {
+    width: 100%;
+    min-height: 7rem;
+    background: #E3E3E3;
+    color: #16191d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.team .team-title h2 {
+    width: 90%;
+    font-size: 2.2rem;
+    margin: 10px 0;
+    line-height: 1.4;
+    font-weight: 700;
+}
+
+.team .team-grid{
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+}
+
+.team .team-grid .teammate {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-between;
+    background-color: #efefef;
+    padding: 20px 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+.teammate figcaption  {
+    margin-top: 10px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.2;
+    font-family: Raleway, 'sans-serif';
+    font-weight: 600;
+}
+.teammate p {
+    width: 90%;
+    font-size: 1.6rem;
+    line-height: 1.2;
+    letter-spacing: 1.5px;
+}
+.teammate .social-icons {
+    /* align-self: center; */
+}
+.teammate .social-icons img {
+    margin: 8px;
+}
