--- a/assets/styles.css
+++ b/assets/styles.css
@@ -391,10 +391,12 @@ nav ul #logo.home a:hover {
     background-color: #efefef;
     padding: 20px 10px;
     margin-bottom: 20px;
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
     border-color: rgba(0, 0, 0, 0.10);
-    border-radius: 16px;
+    border-radius: 16px; */
+    box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
+    transition: box-shadow 83ms;
 }
 .teammate figcaption  {
     margin-top: 10px;
