--- a/assets/styles.css
+++ b/assets/styles.css
@@ -266,6 +266,80 @@ footer a {
     color: #16191d;  
 }
 
+/* Contact Page Styles */
+
+.contact .intro-text h1 {
+    font-family: 'Raleway', 'sans-serif';
+    font-weight: 600;
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+}
+.contact .question {
+    color: #feac06;
+    margin-right: 10px;
+}
+.contact-form {
+    width: 100%;
+    margin: 0 auto;
+    background: #2F51B6;
+    color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 25px;
+    padding: 40px;
+}
+.contact h2 {
+    width: 90%;
+    margin: 0 auto;
+    font-size: 2.4rem;
+    font-family: Raleway, 'sans-serif';
+    font-weight: 600;;
+    text-align: center;
+    margin: 10px 0;
+    line-height: 1.4;
+}
+.contact-form form{
+    width: 90%;
+    margin: 0 auto;
+    background-color: #E3E3E3;
+    color: #16191d;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.first-section {
+    margin: 20px ;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.first-section .item {
+    margin: 16px 0;
+    width: 45%;
+}
+.first-section .email {
+    width: 100%;
+}
+.second-section {
+    margin: 20px 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.second-section .item {
+    width: auto;
+    margin-right: 16px;
+}
+.third-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Media Queries for Responsive Site */
 @media screen and (max-width: 800px){
   /* updates to navbar */
