--- a/assets/styles.css
+++ b/assets/styles.css
@@ -285,9 +285,10 @@ footer a {
     color: #f9f9f9;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 25px;
-    padding: 40px;
+    padding: 20px;
+    padding-bottom: 40px;
 }
 .contact h2 {
     width: 90%;
@@ -301,6 +302,7 @@ footer a {
 }
 .contact-form form{
     width: 90%;
+    min-width: 330px;
     margin: 0 auto;
     background-color: #E3E3E3;
     color: #16191d;
@@ -309,37 +311,41 @@ footer a {
     flex-direction: column;
     align-items: center;
 }
-.first-section {
-    margin: 20px ;
+.form-group {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 16px;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    flex-wrap: wrap;    
+    padding: 16px;
 }
-.first-section .item {
-    margin: 16px 0;
-    width: 45%;
-}
-.first-section .email {
-    width: 100%;
-}
-.second-section {
-    margin: 20px 0;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.second-section .item {
-    width: auto;
-    margin-right: 16px;
-}
-.third-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.form-group label, .form-group h3 {
+    font-size: 1.6rem;
+    margin-right: 8px;
+    margin-bottom: 16px;
+    line-height: 1.2;
+    letter-spacing: 1.5px;
 }
 
+.form-group input{ 
+    font-size: 1.6rem;
+    padding: 8px 16px;
+}
+.form-group select {
+    font-size: 1.6rem;
+    padding: 8px 16px;
+} 
+.form-group textarea {
+    width: 100%;
+    resize: none;
+}
+.form-group button {
+    max-width: 150px;
+    margin-bottom: 25px;
+}
+  
 /* Media Queries for Responsive Site */
 @media screen and (max-width: 800px){
   /* updates to navbar */
